--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -188,7 +188,7 @@
         </div>
         <div class="div_body_middle">
             <div class="div_body_middle_left">
-                <div class="div_body_middle_left_section" style="height: 280px;">
+                <div id="div_body_middle_left_section_fc" class="div_body_middle_left_section" style="height: 280px;">
                     <p class="p_body_middle_left_title">房产</p>
                     <p class="p_body_middle_left_title_small">房屋买卖</p>
                     <ul class="ul_body_middle_left_section" style="height: 60px;">
@@ -209,10 +209,10 @@
                         <li class="li_body_middle_left_section">写字楼出售</li>
                     </ul>
                 </div>
-                <div class="div_body_middle_left_section" style="height: 506px;">
+                <div class="div_body_middle_left_section" style="height: 456px;">
                     <p class="p_body_middle_left_title">车辆</p>
                     <p class="p_body_middle_left_title_small">商用车</p>
-                    <ul class="ul_body_middle_left_section" style="height: 90px;">
+                    <ul class="ul_body_middle_left_section" style="height: 60px;">
                         <li class="li_body_middle_left_section">货车</li>
                         <li class="li_body_middle_left_section">工程车</li>
                         <li class="li_body_middle_left_section">拖拉机</li>
@@ -223,12 +223,12 @@
                         <li class="li_body_middle_left_section">半挂车</li>
                     </ul>
                     <p class="p_body_middle_left_title_small">二手车</p>
-                    <ul class="ul_body_middle_left_section">
+                    <ul class="ul_body_middle_left_section" style="height: 150px;">
                         <li class="li_body_middle_left_section">0-2万</li>
                         <li class="li_body_middle_left_section">2-4万</li>
                         <li class="li_body_middle_left_section">4-8万</li>
                         <li class="li_body_middle_left_section">8万以上</li>
-                        <li class="li_body_middle_left_section">大众</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">大众</li>
                         <li class="li_body_middle_left_section">丰田</li>
                         <li class="li_body_middle_left_section">本田</li>
                         <li class="li_body_middle_left_section">宝马</li>
@@ -237,6 +237,169 @@
                         <li class="li_body_middle_left_section">奥迪</li>
                         <li class="li_body_middle_left_section">别克</li>
                         <li class="li_body_middle_left_section">铃木</li>
+                        <li class="li_body_middle_left_section">雪弗兰</li>
+                        <li class="li_body_middle_left_section">奇瑞</li>
+                        <li class="li_body_middle_left_section">比亚迪</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">二手轿车</li>
+                        <li class="li_body_middle_left_section">客车</li>
+                        <li class="li_body_middle_left_section">摩托车</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">电动车</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">车辆周边</p>
+                    <ul class="ul_body_middle_left_section" style="height: 60px;">
+                        <li class="li_body_middle_left_section">贷款购车</li>
+                        <li class="li_body_middle_left_section">高价收车</li>
+                        <li class="li_body_middle_left_section">新车优惠</li>
+                        <li class="li_body_middle_left_section">维修保养</li>
+                        <li class="li_body_middle_left_section">汽车配件</li>
+                        <li class="li_body_middle_left_section">汽车用品</li>
+                        <li class="li_body_middle_left_section" style="width: 100px;">拼车顺风车</li>
+                    </ul>
+                </div>
+                <div class="div_body_middle_left_section" style="height: 630px;">
+                    <p class="p_body_middle_left_title">宠物</p>
+                    <p class="p_body_middle_left_title_small p_body_middle_left_title_small_active">狗狗</p>
+                    <ul class="ul_body_middle_left_section" style="height: 60px;">
+                        <li class="li_body_middle_left_section">金毛</li>
+                        <li class="li_body_middle_left_section">哈士奇</li>
+                        <li class="li_body_middle_left_section">阿拉斯加</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">泰迪</li>
+                        <li class="li_body_middle_left_section">斗牛犬</li>
+                        <li class="li_body_middle_left_section">格力犬</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small p_body_middle_left_title_small_active">猫猫</p>
+                    <ul class="ul_body_middle_left_section" style="height: 60px;">
+                        <li class="li_body_middle_left_section">蓝猫</li>
+                        <li class="li_body_middle_left_section">折耳猫</li>
+                        <li class="li_body_middle_left_section">加菲猫</li>
+                        <li class="li_body_middle_left_section">布偶猫</li>
+                        <li class="li_body_middle_left_section">短毛猫</li>
+                        <li class="li_body_middle_left_section">豹猫</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">花鸟虫鱼</p>
+                    <ul class="ul_body_middle_left_section">
+                        <li class="li_body_middle_left_section">观赏鱼</li>
+                        <li class="li_body_middle_left_section">观赏鸟</li>
+                        <li class="li_body_middle_left_section">观赏龟</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">宠物服务</p>
+                    <ul class="ul_body_middle_left_section">
+                        <li class="li_body_middle_left_section">配种</li>
+                        <li class="li_body_middle_left_section">训练</li>
+                        <li class="li_body_middle_left_section">托运</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">宠物医院</p>
+                    <ul class="ul_body_middle_left_section">
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">美容</li>
+                        <li class="li_body_middle_left_section">寄养</li>
+                        <li class="li_body_middle_left_section">水族服务</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">宠物用品</p>
+                    <ul class="ul_body_middle_left_section">
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">狗用品</li>
+                        <li class="li_body_middle_left_section">猫用品</li>
+                        <li class="li_body_middle_left_section">水族用品</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">宠物公益</p>
+                    <ul class="ul_body_middle_left_section">
+                        <li class="li_body_middle_left_section">宠物赠送</li>
+                        <li class="li_body_middle_left_section">寻宠启事</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="div_body_middle_left">
+                <div class="div_body_middle_left_section" style="height: 880px; float: left; display: block;">
+                    <p class="p_body_middle_left_title">招聘</p>
+                    <p class="p_body_middle_left_title_small">福利专区</p>
+                    <ul class="ul_body_middle_left_section" style="height: 60px;">
+                        <li class="li_body_middle_left_section">年底双薪</li>
+                        <li class="li_body_middle_left_section">包吃</li>
+                        <li class="li_body_middle_left_section">包住</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">五险一金</li>
+                        <li class="li_body_middle_left_section">交通补助</li>
+                        <li class="li_body_middle_left_section">房补</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">双休</li>
+                        <li class="li_body_middle_left_section">带薪年假</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">热招行业</p>
+                    <ul class="ul_body_middle_left_section" style="height: 60px;">
+                        <li class="li_body_middle_left_section">销售</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">工人</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">司机</li>
+                        <li class="li_body_middle_left_section">餐饮</li>
+                        <li class="li_body_middle_left_section">出国劳务</li>
+                        <li class="li_body_middle_left_section">物流运输</li>
+                        <li class="li_body_middle_left_section">超市零售</li>
+                        <li class="li_body_middle_left_section">家政保洁</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">热招职位</p>
+                    <ul class="ul_body_middle_left_section" style="height: 600px;">
+                        <li class="li_body_middle_left_section">销售</li>
+                        <li class="li_body_middle_left_section">客服</li>
+                        <li class="li_body_middle_left_section">文员</li>
+                        <li class="li_body_middle_left_section">会计</li>
+                        <li class="li_body_middle_left_section">普工</li>
+                        <li class="li_body_middle_left_section">保安</li>
+                        <li class="li_body_middle_left_section">保姆</li>
+                        <li class="li_body_middle_left_section">司机</li>
+                        <li class="li_body_middle_left_section">厨师</li>
+                        <li class="li_body_middle_left_section">检验</li>
+                        <li class="li_body_middle_left_section">服务员</li>
+                        <li class="li_body_middle_left_section">淘宝客服</li>
+                        <li class="li_body_middle_left_section">保洁</li>
+                        <li class="li_body_middle_left_section">采购</li>
+                        <li class="li_body_middle_left_section">快递员</li>
+                        <li class="li_body_middle_left_section">平面设计</li>
+                        <li class="li_body_middle_left_section">美发</li>
+                        <li class="li_body_middle_left_section">出纳</li>
+                        <li class="li_body_middle_left_section">收银员</li>
+                        <li class="li_body_middle_left_section">健身教练</li>
+                        <li class="li_body_middle_left_section">外贸</li>
+                        <li class="li_body_middle_left_section">幼教</li>
+                        <li class="li_body_middle_left_section">洗车工</li>
+                        <li class="li_body_middle_left_section">直播主播</li>
+                        <li class="li_body_middle_left_section">房产</li>
+                        <li class="li_body_middle_left_section">演员</li>
+                        <li class="li_body_middle_left_section">美容师</li>
+                        <li class="li_body_middle_left_section">仓库管理</li>
+                        <li class="li_body_middle_left_section">电工</li>
+                        <li class="li_body_middle_left_section">导游</li>
+                        <li class="li_body_middle_left_section">导购员</li>
+                        <li class="li_body_middle_left_section">摄影摄像</li>
+                        <li class="li_body_middle_left_section">人事</li>
+                        <li class="li_body_middle_left_section">中医</li>
+                        <li class="li_body_middle_left_section">钟点工</li>
+                        <li class="li_body_middle_left_section">检验化验</li>
+                        <li class="li_body_middle_left_section">焊工</li>
+                        <li class="li_body_middle_left_section">家教</li>
+                        <li class="li_body_middle_left_section">营业员</li>
+                        <li class="li_body_middle_left_section">美发学徒</li>
+                        <li class="li_body_middle_left_section">律师</li>
+                        <li class="li_body_middle_left_section">翻译</li>
+                        <li class="li_body_middle_left_section">程序员</li>
+                        <li class="li_body_middle_left_section">护士护理</li>
+
+                    </ul>
+                </div>
+                <div id="div_body_middle_left_section_fc" class="div_body_middle_left_section" style="height: 280px;">
+                    <p class="p_body_middle_left_title">房产</p>
+                    <p class="p_body_middle_left_title_small">房屋买卖</p>
+                    <ul class="ul_body_middle_left_section" style="height: 60px;">
+                        <li class="li_body_middle_left_section">求租求购</li>
+                        <li class="li_body_middle_left_section">日租短租</li>
+                        <li class="li_body_middle_left_section">找人合租</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">二手房</li>
+                        <li class="li_body_middle_left_section">新房出售</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">房屋出租</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">商业地产</p>
+                    <ul class="ul_body_middle_left_section">
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">商铺出租</li>
+                        <li class="li_body_middle_left_section">商铺出售</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">商铺转让</li>
+                        <li class="li_body_middle_left_section">厂房仓库</li>
+                        <li class="li_body_middle_left_section">写字楼出租</li>
+                        <li class="li_body_middle_left_section">写字楼出售</li>
                     </ul>
                 </div>
             </div>
