--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -188,7 +188,7 @@
         </div>
         <div class="div_body_middle">
             <div class="div_body_middle_left">
-                <div id="div_body_middle_left_section_fc" class="div_body_middle_left_section" style="height: 280px;">
+                <div id="div_body_middle_left_section_fc" class="div_body_middle_left_section" style="height: 270px;">
                     <p class="p_body_middle_left_title">房产</p>
                     <p class="p_body_middle_left_title_small">房屋买卖</p>
                     <ul class="ul_body_middle_left_section" style="height: 60px;">
@@ -212,7 +212,7 @@
                 <div class="div_body_middle_left_section" style="height: 456px;">
                     <p class="p_body_middle_left_title">车辆</p>
                     <p class="p_body_middle_left_title_small">商用车</p>
-                    <ul class="ul_body_middle_left_section" style="height: 60px;">
+                    <ul class="ul_body_middle_left_section" style="height: 90px;">
                         <li class="li_body_middle_left_section">货车</li>
                         <li class="li_body_middle_left_section">工程车</li>
                         <li class="li_body_middle_left_section">拖拉机</li>
@@ -223,7 +223,7 @@
                         <li class="li_body_middle_left_section">半挂车</li>
                     </ul>
                     <p class="p_body_middle_left_title_small">二手车</p>
-                    <ul class="ul_body_middle_left_section" style="height: 150px;">
+                    <ul class="ul_body_middle_left_section" style="height: 180px;">
                         <li class="li_body_middle_left_section">0-2万</li>
                         <li class="li_body_middle_left_section">2-4万</li>
                         <li class="li_body_middle_left_section">4-8万</li>
@@ -308,10 +308,10 @@
                 </div>
             </div>
             <div class="div_body_middle_left">
-                <div class="div_body_middle_left_section" style="height: 880px; float: left; display: block;">
+                <div class="div_body_middle_left_section" style="height: 670px;">
                     <p class="p_body_middle_left_title">招聘</p>
                     <p class="p_body_middle_left_title_small">福利专区</p>
-                    <ul class="ul_body_middle_left_section" style="height: 60px;">
+                    <ul class="ul_body_middle_left_section" style="height: 90px;">
                         <li class="li_body_middle_left_section">年底双薪</li>
                         <li class="li_body_middle_left_section">包吃</li>
                         <li class="li_body_middle_left_section">包住</li>
@@ -322,7 +322,7 @@
                         <li class="li_body_middle_left_section">带薪年假</li>
                     </ul>
                     <p class="p_body_middle_left_title_small">热招行业</p>
-                    <ul class="ul_body_middle_left_section" style="height: 60px;">
+                    <ul class="ul_body_middle_left_section" style="height: 90px;">
                         <li class="li_body_middle_left_section">销售</li>
                         <li class="li_body_middle_left_section li_body_middle_left_section_active">工人</li>
                         <li class="li_body_middle_left_section li_body_middle_left_section_active">司机</li>
@@ -381,25 +381,189 @@
 
                     </ul>
                 </div>
-                <div id="div_body_middle_left_section_fc" class="div_body_middle_left_section" style="height: 280px;">
-                    <p class="p_body_middle_left_title">房产</p>
-                    <p class="p_body_middle_left_title_small">房屋买卖</p>
-                    <ul class="ul_body_middle_left_section" style="height: 60px;">
-                        <li class="li_body_middle_left_section">求租求购</li>
-                        <li class="li_body_middle_left_section">日租短租</li>
-                        <li class="li_body_middle_left_section">找人合租</li>
-                        <li class="li_body_middle_left_section li_body_middle_left_section_active">二手房</li>
-                        <li class="li_body_middle_left_section">新房出售</li>
-                        <li class="li_body_middle_left_section li_body_middle_left_section_active">房屋出租</li>
+                <div class="div_body_middle_left_section" style="height: 250px;">
+                    <p class="p_body_middle_left_title">兼职</p>
+                    <ul class="ul_body_middle_left_section" style="height: 120px;">
+                        <li class="li_body_middle_left_section">家教</li>
+                        <li class="li_body_middle_left_section">财务会计</li>
+                        <li class="li_body_middle_left_section">服务员</li>
+                        <li class="li_body_middle_left_section">促销导购</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">学生兼职</li>
+                        <li class="li_body_middle_left_section">传单派发</li>
+                        <li class="li_body_middle_left_section">演员</li>
+                        <li class="li_body_middle_left_section">客服</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">模特</li>
+                        <li class="li_body_middle_left_section">平面设计</li>
+                        <li class="li_body_middle_left_section">才艺老师</li>
+                        <li class="li_body_middle_left_section">充场观众</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">网络兼职</li>
+                        <li class="li_body_middle_left_section">展会活动</li>
+                        <li class="li_body_middle_left_section">兼职群</li>
+                        <li class="li_body_middle_left_section">其他兼职</li>
                     </ul>
-                    <p class="p_body_middle_left_title_small">商业地产</p>
+                </div>
+                <div class="div_body_middle_left_section" style="height: 210px;">
+                    <p class="p_body_middle_left_title">培训</p>
+                    <ul class="ul_body_middle_left_section" style="height: 90px;">
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">家教机构</li>
+                        <li class="li_body_middle_left_section">家教个人</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">职业技能</li>
+                        <li class="li_body_middle_left_section">外语培训</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">学历教育</li>
+                        <li class="li_body_middle_left_section">电脑培训</li>
+                        <li class="li_body_middle_left_section">设计培训</li>
+                        <li class="li_body_middle_left_section">体育培训</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">艺术培训</li>
+                        <li class="li_body_middle_left_section">幼儿培训</li>
+                        <li class="li_body_middle_left_section">出国留学</li>
+                        <li class="li_body_middle_left_section">移民服务</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="div_body_middle_left">
+                <div class="div_body_middle_left_section" style="height: 820px;">
+                    <p class="p_body_middle_left_title">生活服务</p>
+                    <p class="p_body_middle_left_title_small">家政服务</p>
+                    <ul class="ul_body_middle_left_section" style="height: 90px;">
+                        <li class="li_body_middle_left_section">保姆月嫂</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">生活配送</li>
+                        <li class="li_body_middle_left_section">物品回收</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">搬家</li>
+                        <li class="li_body_middle_left_section">保洁清洗</li>
+                        <li class="li_body_middle_left_section">洗衣护理</li>
+                        <li class="li_body_middle_left_section">空调移机</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">维修服务</p>
+                    <ul class="ul_body_middle_left_section" style="height: 90px;">
+                        <li class="li_body_middle_left_section">开锁修锁</li>
+                        <li class="li_body_middle_left_section">管道维修</li>
+                        <li class="li_body_middle_left_section">房屋维修</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">家电维修</li>
+                        <li class="li_body_middle_left_section">家具维修</li>
+                        <li class="li_body_middle_left_section">电脑维修</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">手机维修</li>
+                        <li class="li_body_middle_left_section">数码维修</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">装修建材</p>
+                    <ul class="ul_body_middle_left_section" style="height: 60px;">
+                        <li class="li_body_middle_left_section">家庭装修</li>
+                        <li class="li_body_middle_left_section">软装装饰</li>
+                        <li class="li_body_middle_left_section">建材</li>
+                        <li class="li_body_middle_left_section">工装装修</li>
+                        <li class="li_body_middle_left_section">局部翻新</li>
+                        <li class="li_body_middle_left_section">拆旧</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">汽车服务</p>
+                    <ul class="ul_body_middle_left_section" style="height: 60px;">
+                        <li class="li_body_middle_left_section">租车</li>
+                        <li class="li_body_middle_left_section">陪驾陪练</li>
+                        <li class="li_body_middle_left_section">代驾</li>
+                        <li class="li_body_middle_left_section">驾校</li>
+                        <li class="li_body_middle_left_section">维修保养</li>
+                        <li class="li_body_middle_left_section">车险服务</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">婚庆摄影</p>
                     <ul class="ul_body_middle_left_section">
-                        <li class="li_body_middle_left_section li_body_middle_left_section_active">商铺出租</li>
-                        <li class="li_body_middle_left_section">商铺出售</li>
-                        <li class="li_body_middle_left_section li_body_middle_left_section_active">商铺转让</li>
-                        <li class="li_body_middle_left_section">厂房仓库</li>
-                        <li class="li_body_middle_left_section">写字楼出租</li>
-                        <li class="li_body_middle_left_section">写字楼出售</li>
+                        <li class="li_body_middle_left_section">婚庆摄影</li>
+                        <li class="li_body_middle_left_section">婚庆服务</li>
+                        <li class="li_body_middle_left_section">婚车租赁</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">旅游服务</p>
+                    <ul class="ul_body_middle_left_section">
+                        <li class="li_body_middle_left_section">签证服务</li>
+                        <li class="li_body_middle_left_section">酒店预订</li>
+                        <li class="li_body_middle_left_section">旅游度假</li>
+                        <li class="li_body_middle_left_section">机票服务</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">休闲服务</p>
+                    <ul class="ul_body_middle_left_section">
+                        <li class="li_body_middle_left_section">休闲娱乐</li>
+                        <li class="li_body_middle_left_section">运动健身</li>
+                        <li class="li_body_middle_left_section">按摩足浴</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">其他服务</p>
+                    <ul class="ul_body_middle_left_section">
+                        <li class="li_body_middle_left_section">丽人服务</li>
+                        <li class="li_body_middle_left_section">鲜花盆景</li>
+                        <li class="li_body_middle_left_section">本地名站</li>
+                        <li class="li_body_middle_left_section">商品出售</li>
+                        <li class="li_body_middle_left_section">白事服务</li>
+                        <li class="li_body_middle_left_section">工艺鉴定</li>
+                        <li class="li_body_middle_left_section">其他服务</li>
+                    </ul>
+                </div>
+                <div class="div_body_middle_left_section" style="height: 240px;">
+                    <p class="p_body_middle_left_title">交友</p>
+                    <ul class="ul_body_middle_left_section" style="height: 60px;">
+                        <li class="li_body_middle_left_section">同城交友</li>
+                        <li class="li_body_middle_left_section">同城征婚</li>
+                        <li class="li_body_middle_left_section">同城活动</li>
+                        <li class="li_body_middle_left_section">异地交友</li>
+                        <li class="li_body_middle_left_section">婚介服务</li>
+                        <li class="li_body_middle_left_section">技能交换</li>
+                        <li class="li_body_middle_left_section">找人寻物</li>
+                        <li class="li_body_middle_left_section">宝贝寻家</li>
+                        <li class="li_body_middle_left_section">交友群</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="div_body_middle_left" style="margin-right: 0;">
+                <div class="div_body_middle_left_section" style="height: 710px;">
+                    <p class="p_body_middle_left_title">商务服务</p>
+                    <p class="p_body_middle_left_title_small">商务服务</p>
+                    <ul class="ul_body_middle_left_section" style="height: 240px;">
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">担保贷款</li>
+                        <li class="li_body_middle_left_section">投资理财</li>
+                        <li class="li_body_middle_left_section">财务会计</li>
+                        <li class="li_body_middle_left_section">公司注册</li>
+                        <li class="li_body_middle_left_section">网站建设</li>
+                        <li class="li_body_middle_left_section">网络布线</li>
+                        <li class="li_body_middle_left_section">设计策划</li>
+                        <li class="li_body_middle_left_section">设备维修</li>
+                        <li class="li_body_middle_left_section">设备租赁</li>
+                        <li class="li_body_middle_left_section">建筑维修</li>
+                        <li class="li_body_middle_left_section">货运物流</li>
+                        <li class="li_body_middle_left_section">快递服务</li>
+                        <li class="li_body_middle_left_section">律师服务</li>
+                        <li class="li_body_middle_left_section">翻译服务</li>
+                        <li class="li_body_middle_left_section">速记服务</li>
+                        <li class="li_body_middle_left_section">保险服务</li>
+                        <li class="li_body_middle_left_section">印刷包装</li>
+                        <li class="li_body_middle_left_section">广告媒体</li>
+                        <li class="li_body_middle_left_section">礼品定制</li>
+                        <li class="li_body_middle_left_section">喷绘招牌</li>
+                        <li class="li_body_middle_left_section">庆典演出</li>
+                        <li class="li_body_middle_left_section">展览展会</li>
+                        <li class="li_body_middle_left_section">餐饮美食</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">招商加盟</p>
+                    <ul class="ul_body_middle_left_section" style="height: 90px;">
+                        <li class="li_body_middle_left_section">餐饮加盟</li>
+                        <li class="li_body_middle_left_section">网店加盟</li>
+                        <li class="li_body_middle_left_section">建材加盟</li>
+                        <li class="li_body_middle_left_section">美容保健</li>
+                        <li class="li_body_middle_left_section">微商加盟</li>
+                        <li class="li_body_middle_left_section">快递物流</li>
+                        <li class="li_body_middle_left_section">教育培训</li>
+                        <li class="li_body_middle_left_section">产品代理</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">工业设备</p>
+                    <ul class="ul_body_middle_left_section">
+                        <li class="li_body_middle_left_section">工业机械</li>
+                        <li class="li_body_middle_left_section">木工设备</li>
+                        <li class="li_body_middle_left_section">化工设备</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">物品批发</p>
+                    <ul class="ul_body_middle_left_section">
+                        <li class="li_body_middle_left_section">礼品</li>
+                        <li class="li_body_middle_left_section">服装</li>
+                        <li class="li_body_middle_left_section">化妆品</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">农林牧渔</p>
+                    <ul class="ul_body_middle_left_section">
+                        <li class="li_body_middle_left_section">畜禽养殖</li>
+                        <li class="li_body_middle_left_section">园林花卉</li>
+                        <li class="li_body_middle_left_section" style="width: 80px;">动植物种苗</li>
                     </ul>
                 </div>
             </div>
