--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY.css
@@ -21,7 +21,8 @@
 
 /*首页_主体_上部*/
 .div_body .div_body_top{ width: 1200px;overflow-x: hidden;}
-.div_body .div_body_top .div_body_top_left{ width: 930px;height: 140px;margin-top: 10px;display: inline-block;float: left;background: #ffffff;padding: 10px 0px;}
+.div_body .div_body_top .div_body_top_left{ width: 896px;height: 140px;margin-top: 10px;display: inline-block;float: left;background: #ffffff;padding: 10px 0px;}
+.div_body .div_body_top .div_body_top_left .ul_body_top_left{ padding: 0;}
 .div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left{ width: 110px;float: left;}
 .div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left .p_body_top_left_dl:hover{ cursor: pointer;color: #ef6100;text-decoration: underline;}
 .div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left .i_body_top_left{ width: 44px;height: 44px;margin-left: 34px;text-align:center;display: block;background-size: 100%; }
@@ -29,28 +30,28 @@
 .div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left .span_body_top_left{font-size: 12px;color: #999;display: inline-block;text-align: center;}
 .div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left .span_body_top_left_xl:hover{ cursor: pointer;color: #ef6100;text-decoration: underline;}
 
-.div_body .div_body_top .div_body_top_right{ width: 260px;height: 140px;margin-top: 10px;padding: 6px 6px;margin-left: 10px;display: inline-block;float: left;background: #ffffff;}
+.div_body .div_body_top .div_body_top_right{ width: 292px;height: 140px;margin-top: 10px;padding: 6px 6px;margin-left: 10px;display: inline-block;float: left;background: #ffffff;}
 .div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb{ }
 .div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .p_body_top_right_zxfb{ font-size: 16px;font-weight: 700;border-bottom: 1px solid #cccccc;display: block;height: 35px;}
-.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .div_ul_body_top_right_zxfb{height: 60px;width: 248px;overflow: hidden;}
-.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb{ padding: 0;height: 180px;width: 248px;}
+.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .div_ul_body_top_right_zxfb{height: 60px;width: 280px;overflow: hidden;}
+.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb{ padding: 0;height: 180px;width: 280px;}
 .div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb{ width: 100%;display: block; }
 .div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb .img_body_top_right_zxfb{ width: 60px;height: 60px;display: inline-block;float: left; }
-.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb .div_body_top_right_zxfb{ width: 180px;height: 60px;float: right;}
+.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb .div_body_top_right_zxfb{ width: 210px;height: 60px;float: right;}
 .div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb .div_body_top_right_zxfb .span_body_top_right_zxfb{ font-size: 12px;display: block;}
 .div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb .div_body_top_right_zxfb .span_body_top_right_zxfb:hover{ color: #ef6100;text-decoration: underline;cursor: pointer;}
 .div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb .div_body_top_right_zxfb .span_body_top_right_zxfb_sj{ color: #999999;font-size: 12px;display: block;margin-top: 5px;}
 
 /*首页_主体_中部*/
 .div_body .div_body_middle{ width: 1200px;overflow-x: hidden;}
-.div_body .div_body_middle .div_body_middle_left{width: 302px;height: 1500px;margin-top: 10px;margin-right: 10px;display: inline-block;float: left;background: #eeeff1;}
-.div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section { width: 302px;display: block; background: #ffffff;padding: 10px 20px;}
+.div_body .div_body_middle .div_body_middle_left{width: 292px;height: 1500px;margin-top: 10px;margin-right: 10px;display: inline-block;float: left;background: #eeeff1;}
+.div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section { width: 292px;display: block; background: #ffffff;padding: 10px 20px;float: left;}
 .div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section .p_body_middle_left_title{font-size: 18px;font-weight: 700;border-bottom: 1px solid #cccccc;display: block;height: 40px;color: #5bc0de;}
 .div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section .p_body_middle_left_title_small{font-size: 12px;color: #999999;display: block;height: 25px;}
 .div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section .p_body_middle_left_title_small_active{color: #ef6100;}
 .div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section .ul_body_middle_left_section{display: block;padding: 0;height: 30px;}
-.div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section .ul_body_middle_left_section .li_body_middle_left_section{display: inline-block;width: 65px;height: 30px;font-size: 14px;float: left;}
-#div_body_middle_left_section_fc .li_body_middle_left_section{display: inline-block;margin-right: 10px;width:auto ;height: 30px;font-size: 14px;float: left;}
+.div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section .ul_body_middle_left_section .li_body_middle_left_section{display: inline-block;width: 75px;height: 30px;font-size: 14px;float: left;}
+.div_body .div_body_middle .div_body_middle_left #div_body_middle_left_section_fc .ul_body_middle_left_section .li_body_middle_left_section{display: inline-block;margin-right: 10px;width:auto ;height: 30px;font-size: 14px;float: left;}
 .div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section .ul_body_middle_left_section .li_body_middle_left_section:hover{ cursor: pointer;color: #ef6100;text-decoration: underline;}
 .div_body .div_body_middle .div_body_middle_left .div_body_middle_left_section .ul_body_middle_left_section .li_body_middle_left_section_active{color: #ef6100;}
 
